# asarayja-streamoverlays

./: .gitignore  .npmrc  DESKTOP.md  README.md  WINDOWS.md  next.config.ts  package-lock.json  package.json
.github/workflows/: deploy.yml
docs/: color-design-reference.md
public/fonts/: offline-fonts.css
samples/sprites/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/designs/: page.tsx
src/app/editor/: page.tsx
src/app/profile/: page.tsx
src/app/projects/: page.tsx
src/app/qa/: route.ts
src/app/templates/: page.tsx
src/components/: ColorPicker.tsx  ContrastCheck.tsx  StoreHydrator.tsx  ThemeEditor.tsx  ui.tsx
src/components/editor/: EditorCanvas.tsx  EditorShell.tsx  ExportDialog.tsx  LeftPanel.tsx  RightPanel.tsx  Timeline.tsx
src/components/gallery/: MyDesigns.tsx  RecentProjects.tsx  (+2 more)
src/data/: custom-designs.ts  fonts.ts  icon-library.ts  icons.ts  palettes.ts  templates.ts  translations.ts
src/lib/: animation.ts  color.ts  design-file.ts  designs.ts  export.ts  i18n.ts  id.ts  image.ts  measure.ts  placeholders.ts  share.ts  sprite.ts  theme.ts  types.ts  useClock.ts  useElementSize.ts  zip.ts
src/store/: editor.ts  favorites.ts  keybinds.ts  lang.ts  profile.ts  projects.ts
standalone/: README.md  server.js
standalone/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json
(+134 files in other folders)
