[package]
name = "asarayja-overlays"
version = "0.1.0"
description = "Asarayja Stream Overlays — a desktop overlay editor for Twitch / OBS."
authors = ["Asarayja"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "asarayja_overlays_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# By default Tauri runs in production mode; the dev server is used via `tauri dev`.
custom-protocol = ["tauri/custom-protocol"]
